# MiNIRust

./: README.md
Labs/Lab01/collatz_game/: Cargo.toml
Labs/Lab01/collatz_game/src/: collatz.rs  collatz_game.rs  main.rs  tuples.rs
Labs/Lab02/numbers/src/: double_string.rs  main.rs  number_with_units.rs
Labs/Lab04/divisors/: Cargo.toml
Labs/Lab05/simple_language/: Cargo.toml
Labs/Lab07/interloop/: Cargo.toml
Labs/Lab07/iterloop/: Cargo.toml
Labs/Lab08/: README.md
Labs/Project01/database/: README.md
Projects/Project01/database/: Cargo.toml  README.md
Projects/Project01/database/docs/examples/: users.sql
Projects/Project01/database/src/: cli.rs  core.rs  main.rs
Projects/Project01/database/src/ast/: ast_error.rs  expressions.rs  statements.rs
Projects/Project01/database/src/ast/clauses/: order_by.rs
Projects/Project01/database/src/ast/expressions/: comparison.rs  condition.rs
Projects/Project01/database/src/ast/statements/: read_from.rs
Projects/Project01/database/src/core/: errors.rs  types.rs
Projects/Project01/database/src/core/errors/: create_error.rs  select_error.rs
Projects/Project01/database/src/execution/: commands.rs
Projects/Project01/database/src/execution/commands/: save_as.rs  select.rs
Projects/Project01/database/src/parsing/: query_grammar.pest
Projects/Project01/database/src/tui/: app.rs  ui.rs
Projects/Project01/database/src/tui/ui/: active_tab.rs
Projects/Project03/: Cargo.toml  main.c
Projects/Project03/red_black_tree/: .gitignore  Makefile  README.md
Projects/Project03/src/: char_container.rs  lib.rs
(+87 files in other folders)
