[package]
name = "database"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "database-cli"
path = "src/main.rs"

[[bin]]
name = "database-gui"
path = "src/bin/gui.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
unicode-width = "0.1"
